Fix scrolling issue; add scrollbar css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,30 @@ body::after {
     opacity: 0.2;
 }
 
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 14px;
+    background-color: #f0f0f0;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 12px;
+    border: 4px solid rgba(255,255,255,0);
+    background-clip: content-box;
+    background-color: #A0A0A0;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    border-radius: 12px;
+    border: 4px solid rgba(255,255,255,0);
+    background-clip: content-box;
+    background-color: #A0A0A0;
+}
+
+::-webkit-scrollbar-corner {
+    background-color: #e6e6e6;
+}
+
 div#introText {
     width: 100%;
 }
